--- a/src/components/Alunos/index.css
+++ b/src/components/Alunos/index.css
@@ -1,6 +1,3 @@
-div.aluno-container {
-    margin-top:  -30%;
-}
 .texto {
     color: whitesmoke;
 }
@@ -9,4 +6,11 @@ input {
     height: 20px;
     font-size: 10pt;
     width: 400px;
+}
+ul li {
+    list-style: none;
+    float: left;
+    text-align: left;
+    border: 1px solid #fff;
+    padding: 5px;
 }
