ajutes de rota no react

--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -4,9 +4,10 @@
     border-radius: 20%;
 }
 div.login-container {
-    margin-top:  -30%;
+    margin-top:  -20%;
 }
 
 .form-control {
     height: 20px;
+    margin: 5px;
 }
